--- a/DayOpenDoors/DayOpenDoors/MainPage.xaml
+++ b/DayOpenDoors/DayOpenDoors/MainPage.xaml
@@ -22,15 +22,14 @@
                     <StackLayout Orientation="Horizontal" BackgroundColor="White">
                         <Image Source="CoolTrench.jpg" WidthRequest="50" HeightRequest="50" HorizontalOptions="Start"/>
                         <StackLayout VerticalOptions="CenterAndExpand" Spacing="0">
-                            <Label TextColor="Blue" x:Name="NameLabel" FontSize="Medium" />
+                            <Label TextColor="Blue" x:Name="NameLabel" FontSize="Medium"/>
                             <Label TextColor="Orange" x:Name="StatusLabel" FontSize="Small"/>
                         </StackLayout>
-                        <Button Text="Сменить аккаунт" Clicked="Exit" HorizontalOptions="FillAndExpand"
-                                BorderColor="White" VerticalOptions="EndAndExpand"/>
                     </StackLayout>
                     <Button Text="План мероприятия" Clicked="Plan_Click"/>
                     <Button Text="Чат" Clicked="Chat_Click"/>
                     <Button Text="Как добраться" Clicked="Way_Click"/>
+                    <Button Text="Сменить аккаунт" Clicked="Exit"/>
                 </StackLayout>
             </ContentPage.Content>
         </ContentPage>
