--- a/DayOpenDoors/DayOpenDoors/PlanPage.xaml
+++ b/DayOpenDoors/DayOpenDoors/PlanPage.xaml
@@ -20,7 +20,7 @@
                                         </StackLayout>
                                         <BoxView BackgroundColor="{Binding EventColor}" WidthRequest="5" CornerRadius="10"/>
                                         <StackLayout HorizontalOptions="FillAndExpand">
-                                            <Label Text="{Binding Name}" TextColor="Blue" MaxLines="3"/>
+                                            <Label Text="{Binding Name}" TextColor="#265bab" MaxLines="3"/>
                                             <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" VerticalOptions="EndAndExpand">
                                                 <Label Text="{Binding Type}" TextColor="Orange" HorizontalOptions="Start"/>
                                                 <Label Text="{Binding Place}" HorizontalOptions="CenterAndExpand"/>
@@ -43,9 +43,9 @@
                     <RowDefinition Height="50"/>
                 </Grid.RowDefinitions>
                 <Button Text="Лекции" Clicked="Lections_Click" Grid.Column="0" Grid.Row="0"
-                        BackgroundColor="Blue" TextColor="White" BorderRadius="0" />
+                        BackgroundColor="#265bab" TextColor="White" BorderRadius="0" />
                 <Button Text="Мастер-классы" Clicked="Master_Click" Grid.Column="1" Grid.Row="0"
-                        BackgroundColor="Blue" TextColor="White" BorderRadius="0" />
+                        BackgroundColor="#265bab" TextColor="White" BorderRadius="0" />
             </Grid>
         </StackLayout>
     </ContentPage.Content>
